Fix spacing between paragraphs

--- a/style.css
+++ b/style.css
@@ -12,12 +12,32 @@ h1 {
   flex-direction: row;
 }
 
-img {
+.image-container {
+  background-image: url('images/nikola-johnny-mirkovic-qlqPeDMV6Xc-unsplash.jpg');
+  background-size: cover;
   width: 100%;
   height: 100vh;
   flex: 2;
 }
 
+.logo-div {
+  font-family: 'Amatic SC', cursive;
+  font-size: 46px;
+  background-color: rgba(0, 0, 0, 0.246);
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 25px 0;
+  position: relative;
+  top: 100px;
+}
+
+.icon {
+  font-size: 1.01em;
+  position: relative;
+  top: 5px;
+  right: 5px;
+}
 .main-content {
   flex: 4;
   display: flex;
@@ -25,17 +45,21 @@ img {
   align-items: center;
 }
 
-.header-para,
-.footer-para {
+.header-paras {
   width: 80%;
-
-  margin-top: 110px;
+  margin-top: 80px;
   margin-bottom: 40px;
 }
 
-.footer-para {
-  margin-top: 40px;
+p {
+  margin-bottom: 20px;
 }
+
+p:last-child {
+  margin-top: 20px;
+  width: 80%;
+}
+
 input {
   padding: 6px 3px;
   border: 1px solid #e5e7eb;
